--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -328,11 +328,19 @@
         <section class="flex flex-col gap-6 items-center justify-center w-full">
             <div class="flex flex-col gap-3 items-center w-full">
                 <h2 class="text-green-900 font-extrabold text-2xl text-center">
+                    ACESSE O NOSSO FAQ PARA TIRAR MAIS DÚVIDAS SOBRE MATH TRADES
+                </h2>
+                <a href="/mathtrade-bh/faq" class="text-center w-1/2 mt-2 px-6 py-4 bg-green-700 text-white">
+                    IR PARA PÁGINA DE DÚVIDAS
+                </a>
+            </div>
+            <div class="flex flex-col gap-3 items-center w-full">
+                <h2 class="text-green-900 font-extrabold text-2xl text-center">
                     AGORA QUE JÁ SABE O QUE É UMA MATH TRADE
                     <br>
                     CONHEÇA REGRAS GERAIS PARA OFERTAR SEUS JOGOS E FAZER SUAS TROCAS
                 </h2>
-                <a href="/mathtrade-bh/regras-gerais" class="text-center w-1/2 mt-2">
+                <a href="/2025/mathtrade-bh/regras-gerais" class="text-center w-1/2 mt-2">
                     <img src="/src/img/mathtrade/regras-gerais-math-trade.jpeg" alt="Regras Gerais de uma Math Trade" />
                 </a>
             </div>
