Paginas Math Trade e og tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://bgbh.com.br/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Boardgame BH</title>
+  <title>BoardgameBH [BGBH]</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -13,6 +13,14 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="/src/styles/main.scss" />
+  <!-- OG TAGS -->
+  <meta name="description" content="BoardGameBH [BGBH] - O seu portal de jogos de tabuleiro">
+  <meta property="og:title" content="BGBH - Página Inicial" />
+  <meta property="og:site_name" content="BoardgameBH [BGBH]" />
+  <meta property="og:url" content="https://bgbh.com.br/index.html" />
+  <meta property="og:description" content="BGBH - Um portal feito para você que ama boardgame" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://bgbh.com.br/public/images/logo/bgbh-com-sombra.png" />
 </head>
 
 <body>
@@ -130,7 +138,7 @@
         <a href="/2025/mathtrade-bh/regras-gerais">
           <img src="src/img/mathtrade/regras-gerais-math-trade.jpeg" alt="Math Trade BH - Regras Gerais">
         </a>
-        <a href="https://bgbh.com.br/mathtrade-bh/edicao-novembro-2024">
+        <a href="/2025/mathtrade-bh/edicao-novembro-2024">
           <img src="src/img/mathtrade/615x330-MT9.png" alt="Math Trade BH - Edição Novembro 2024">
         </a>
       </div>
