--- a/mathtrade-bh/regras-gerais.html
+++ b/mathtrade-bh/regras-gerais.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boardgame BH</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,7 +78,7 @@
     </header>
 
     <!-- CONTEUDO PRINCIPAL -->
-    <main class="pt-6">
+    <main class="py-6">
         <section class="py-6 max-w-[90vw] mx-auto" id="regras_gerais">
             <h1 class="text-green-900 font-extrabold text-3xl text-center mb-5">REGRAS GERAIS DE UMA MATH TRADE</h1>
             <p class="font-bold text-red-700 text-xl">IMPORTANTE:</p>
@@ -289,6 +288,27 @@
                         </span>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <!-- PROXIMOS PASSOS -->
+        <section class="flex flex-col gap-6 items-center justify-center w-full">
+            <div class="flex flex-col gap-3 items-center w-full">
+                <h2 class="text-green-900 font-extrabold text-2xl text-center">
+                    ACESSE O NOSSO FAQ PARA TIRAR MAIS DÚVIDAS SOBRE MATH TRADES
+                </h2>
+                <a href="/mathtrade-bh/faq" class="text-center w-1/2 mt-2 px-6 py-4 bg-green-700 text-white">
+                    IR PARA PÁGINA DE DÚVIDAS
+                </a>
+            </div>
+            <div class="flex flex-col gap-3 items-center w-full">
+                <h2 class="text-green-900 font-extrabold text-2xl text-center">
+                    APÓS A LEITURA DAS REGRAS, CASO QUEIRA PARTICIPAR DA NOSSA PRÓXIMA MATH TRADE,
+                    <br>
+                    FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
+                </h2>
+                <a href="/mathtrade-bh/edicao-novembro-2024" class="text-center w-1/2 mt-2">
+                    <img src="/src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
+                </a>
             </div>
         </section>
     </main>
