End of pre-registration period

--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -162,8 +162,8 @@
                         por jogador).
                     </li>
                     <li>
-                        As horas de jogo serão entre 12h00 e 00h00 (Horário de Brasília).
-                        Nas outras 12 horas (entre 00h00 e 12h00), os jogadores podem continuar a jogar, mas o relógio
+                        As horas de jogo serão entre 09h00 e 21h00 (Horário de Brasília).
+                        Nas outras 12 horas (entre 21h00 e 09h00), os jogadores podem continuar a jogar, mas o relógio
                         mantém-se parado.
                     </li>
                     <li>
@@ -262,7 +262,7 @@
             <h2 class="text-2xl text-center font-bold">REGRAS E CALENDÁRIO DA TEMPORADA 1</h2>
             <div class="flex flex-col gap-3">
                 <div>
-                    <p class="font-bold">PRÉ INSCRIÇÃO NOS TORNEIOS</p>
+                    <p class="font-bold">PRÉ-INSCRIÇÃO NOS TORNEIOS</p>
                     <p>
                         <i class="bi bi-calendar"></i>
                         20/01/2025 a 03/02/2025
@@ -277,19 +277,18 @@
                 </div>
                 <hr>
                 <p>
-                    - Cada torneio terá início em um dia da semana, sempre as 19 horas.
+                    - Os torneios terão início em dias da semana, sempre às 19 horas.
                     <br>
                     <small>
-                        (Exemplo: Um torneio terá inicio na segunda-feira, outro na terça-feira, outro na quarta-feira
-                        etc)
+                        Durante os finais de semana não haverá início de novos torneios, mas as partidas em andamento
+                        continuam
                     </small>
                 </p>
-                <p>
-                    - Durante os finais de semana não haverá início de novos torneios, mas as partidas em andamento
-                    continuam.
-                </p>
                 <hr>
-                <p class="font-bold">
+                <p class="mt-4 font-bold">
+                    INSCRIÇÕES ENCERRADAS
+                </p>
+                <!-- <p class="font-bold">
                     LINK PARA PLANILHA DE PRÉ-INSCRIÇÃO DA TEMPORADA 1
                     <span class="text-red-600 block">
                         Leia a aba de regras da planilha para ver mais detalhes desta temporada
@@ -299,7 +298,7 @@
                         target="_blank">
                         QUERO ME INSCREVER
                     </a>
-                </p>
+                </p> -->
             </div>
             <hr class="my-5">
             <div class="flex flex-col md:flex-row gap-5">
