--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav
-        class="sticky top-0 shadow-md z-50 px-4 py-3 flex items-center justify-between h-14 bg-black border-b-[#198754] border-b">
+        class="sticky top-0 shadow-md z-50 px-4 py-3 hidden items-center justify-between h-14 bg-black border-b-[#198754] border-b">
         <!-- Logo -->
         <div class="h-full">
             <a href="/">
@@ -329,7 +329,7 @@
                 <h2 class="text-green-900 font-extrabold text-2xl text-center">
                     ACESSE O NOSSO FAQ PARA TIRAR MAIS DÚVIDAS SOBRE MATH TRADES
                 </h2>
-                <a href="/mathtrade-bh/faq" class="text-center w-auto mt-2 px-6 py-4 bg-green-700 text-white">
+                <a href="/2025/mathtrade-bh/faq" class="text-center w-auto mt-2 px-6 py-4 bg-green-700 text-white">
                     IR PARA PÁGINA DE DÚVIDAS
                 </a>
             </div>
