--- a/mathtrade-bh/faq.html
+++ b/mathtrade-bh/faq.html
@@ -175,13 +175,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark hidden">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> MATH TRADE BH </a>
+            <a class="navbar-brand" href="#"> MATH TRADE BGBH </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="/" target="_blank">BGBH</a>
@@ -190,7 +190,7 @@
                         <a class="nav-link" href="https://www.instagram.com/ludocafebh/" target="_blank">LudoCafé</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </nav>
     <!-- imagem topo -->
@@ -201,7 +201,7 @@
     <div class="container text-center dicas-e-duvidas">
         <h1 class="specialTitle success my-4">DICAS E DÚVIDAS FREQUENTES</h1>
         <div class="accordion" id="accordionDicasDuvidas">
-            <div class="accordion-item hidden">
+            <!-- <div class="accordion-item">
                 <h2 class="accordion-header" id="heading1">
                     <button class="accordion-button text-success" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
@@ -240,7 +240,7 @@
                         <img src="../public/images/math-trade/autoassign-clickhere.png" alt="autoassign-clickhere">
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading2">
                     <button class="accordion-button text-success" type="button" data-bs-toggle="collapse"
@@ -248,7 +248,7 @@
                         OLWLG só mostra alguns jogos na lista. O que fazer?
                     </button>
                 </h2>
-                <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
+                <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2"
                     data-bs-parent="#accordionDicasDuvidas">
                     <div class="accordion-body">
                         O OLWLG tem um sistema padrão de só exibir itens novos na listagem dos
@@ -259,7 +259,7 @@
                         <br>
                         É uma mensagem escrita em verde:
                         <br>
-                        <img src="../public/images/math-trade/viewall.png" alt="view all">
+                        <img src="/img/math-trade/viewall.png" alt="view all">
                         <br>
                         Basta clicar em "click here" que todos os jogos irão aparecer.
                     </div>
@@ -335,15 +335,15 @@
             </div>
         </div>
     </div>
-    <footer class="container-fluid bg-dark py-3 mt-5">
+    <footer class="container-fluid fixed-bottom bg-dark py-3 mt-5">
         <div class="container text-center">
             <h3 class="text-white">REALIZAÇÃO</h3>
             <div class="mt-3 d-flex align-items-center justify-content-center">
                 <a href="/" target="_blank">
-                    <img class="logo-bgbh" src="../public/images/logo_bgbh/bgbh-sem-sombra.png" alt="Logo BGBH">
+                    <img class="logo-bgbh" src="/src/img/logo/bgbh-logo.png" alt="Logo BGBH">
                 </a>
                 <a class="nav-link" href="https://www.instagram.com/ludocafebh/" target="_blank">
-                    <img class="logo-ludocafe ms-3" src="../public/images/apoio/2_Ludocafe_colorida_negativa.png"
+                    <img class="logo-ludocafe ms-3" src="/img/apoio/2_Ludocafe_colorida_negativa.png"
                         alt="Logo LudoCafe">
                 </a>
             </div>
