add page for special edition novice

--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -293,7 +293,7 @@
         </div>
         <hr class="w-80vw mx-auto my-4">
         <!-- MAIS DETALHES DAS ETAPAS -->
-        <section>
+        <section id="detalhes_etapas">
             <h2 class="text-gray-900 font-extrabold text-2xl text-center">DETALHES DE CADA UMA DAS ETAPAS</h2>
             <p>Clique em cada link abaixo para ver mais detalhes das etapas de uma Math Trade</p>
             <div class="flex flex-col gap-3 mt-4">
@@ -349,8 +349,8 @@
                     <br>
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
-                <a href="/mathtrade-bh/edicao-novembro-2024" class="text-center w-auto mt-2">
-                    <img src="/src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
+                <a href="/2025/mathtrade-bh/edicao-novatos" class="text-center w-auto mt-2">
+                    <img src="/img/math-trade/615x330-MT9.5.png" alt="Regras Math Trade Nona Edição" />
                 </a>
             </div>
         </section>
