--- a/mathtrade-bh/regras-gerais.html
+++ b/mathtrade-bh/regras-gerais.html
@@ -291,12 +291,12 @@
             </div>
         </section>
         <!-- PROXIMOS PASSOS -->
-        <section class="flex flex-col gap-6 items-center justify-center w-full">
+        <section class="flex flex-col gap-6 items-center justify-center w-full pt-5">
             <div class="flex flex-col gap-3 items-center w-full">
                 <h2 class="text-green-900 font-extrabold text-2xl text-center">
                     ACESSE O NOSSO FAQ PARA TIRAR MAIS DÚVIDAS SOBRE MATH TRADES
                 </h2>
-                <a href="/2025/mathtrade-bh/faq" class="text-center w-1/2 mt-2 px-6 py-4 bg-green-700 text-white">
+                <a href="/2025/mathtrade-bh/faq" class="text-center w-auto mt-2 px-6 py-4 bg-green-700 text-white">
                     IR PARA PÁGINA DE DÚVIDAS
                 </a>
             </div>
@@ -306,8 +306,8 @@
                     <br>
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
-                <a href="/mathtrade-bh/edicao-novembro-2024" class="text-center w-1/2 mt-2">
-                    <img src="/src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
+                <a href="/2025/mathtrade-bh/edicao-novatos" class="text-center w-auto mt-2">
+                    <img src="/img/math-trade/615x330-MT9.5.png" alt="Regras Math Trade Edição Novatos" />
                 </a>
             </div>
         </section>
