--- a/mathtrade-bh/edicao-novatos.html
+++ b/mathtrade-bh/edicao-novatos.html
@@ -16,13 +16,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="/src/styles/main.scss" />
   <!-- OG Tags -->
-  <meta name="description" content="MATH TRADE BELO HORIZONTE - 9a edição por BoardgameBH [BGBH].">
+  <meta name="description" content="MATH TRADE BELO HORIZONTE - Edição especial para novatos por BoardgameBH [BGBH].">
   <meta property="og:title" content="MATH TRADE BGBH - BGBH" />
   <meta property="og:site_name" content="BoardgameBH [BGBH]" />
   <meta property="og:url" content="https://bgbh.com.br/mathtradebh.html" />
-  <meta property="og:description" content="MATH TRADE BELO HORIZONTE - 9a edição" />
+  <meta property="og:description" content="MATH TRADE BELO HORIZONTE - Edição Novatos" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://bgbh.com.br/public/images/math-trade/logo.jpg" />
+  <meta property="og:image" content="https://bgbh.com.br/2025/img/math-trade/615x330-MT9.5.png" />
 </head>
 
 <body class="mathtrade-page bg-white">
@@ -348,7 +348,7 @@
           Devido às alterações de horários que a casa possui em determinadas épocas do ano, os horários de entrega dos
           jogos serão confirmados e informados no grupo MATH TRADE INFO do WhatsApp
         </p>
-        <h3 class="font-bold text-center text-xl">ENCONTRO OFICIAL DE ENTREGA DOS JOGOS</h3>
+        <h3 class="font-bold text-center text-xl mt-5">ENCONTRO OFICIAL DE ENTREGA DOS JOGOS</h3>
         <p>
           As informações sobre um eventual Encontro Oficial de Entrega que possa ser combinado será passada
           diretamente nos nossos grupos da Math Trade no WhatsApp
