new layout for mathtrade pages

--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -78,7 +78,7 @@
     </header>
 
     <!-- CONTEUDO PRINCIPAL -->
-    <main class="py-6 max-w-[90vw] mx-auto">
+    <main class="py-6 max-w-[90vw] md:max-w-[1080px] mx-auto">
         <section id="o_que_e">
             <h1 class="text-green-900 font-extrabold text-3xl text-center mb-5">O QUE É UMA MATH TRADE?</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
