--- a/mathtrade-bh/edicao-novatos.html
+++ b/mathtrade-bh/edicao-novatos.html
@@ -86,7 +86,7 @@
   <!-- ./imagem topo -->
 
   <main class="pt-6">
-    <section class="py-6 max-w-[90vw] mx-auto" id="nona_edicao">
+    <section class="pb-6 max-w-[90vw] md:max-w-[1080px] mx-auto" id="nona_edicao">
       <h1 class="text-green-900 font-extrabold text-3xl text-center mb-5">
         MATH TRADE BGBH - Edição Especial - Novatos - Março 2025
       </h1>
@@ -107,7 +107,7 @@
         </a>
       </div>
     </section>
-    <section class="py-6 max-w-[90vw] mx-auto" id="regras_especificas">
+    <section class="max-w-[90vw] md:max-w-[1080px] mx-auto" id="regras_especificas">
       <h2 class="text-2xl text-center font-bold mb-5">
         REGRAS ESPECÍFICAS DA MATH TRADE BGBH - EDIÇÃO ESPECIAL PARA NOVATOS
       </h2>
@@ -163,65 +163,64 @@
         </ul>
       </div>
     </section>
-    <section class="bg-green-950 py-6">
-      <div class="text-white mx-auto max-w-[90vw] grid grid-cols-1 md:grid-cols-2 gap-3">
-        <div class="border border-gray-300 px-3 py-2">
-          <h2 class="text-2xl text-center font-bold mb-5">O QUE SERÁ PERMITIDO NESTA EDIÇÃO</h2>
-          <ul class="list-disc flex flex-col gap-3 pl-6">
-            <li>
-              Até <b>TRÊS</b> ofertas em <b>DINHEIRO</b> serão permitidas como
-              itens de troca nesta edição. Esses itens deverão ser cadastrados
-              individualmente como <span class="italic">OUTSIDE SCOPE OF BGG</span> (código 23953)
-              e o pagamento deverá ser realizado por <b>PIX</b>.
-              <span class="block mt-2">
-                obs: O BGG exige o pagamento de taxas para o site em caso de trocas em dinheiro. Consulte o site ou nos
-                grupos de whatsapp como essa taxa deve ser paga.
-              </span>
-            </li>
-            <li>
-              <b>Livros de RPG e acessórios relacionados a boardgame</b>
-              poderão ser adicionados apenas nas <b>últimas 12 horas</b> da
-              primeira etapa e devem ser cadastrados através do código 23953
-              ("Outside the scope of BGG"). Itens cadastrados descumprindo
-              essa regra serão removidos da geeklist sem aviso prévio.
-            </li>
-          </ul>
-        </div>
-        <div class="border border-gray-300 px-3 py-2">
-          <h2 class="text-2xl text-center font-bold mb-5">
-            O QUE <span class="bold text-red-500">NÃO</span> SERÁ PERMITIDO NESTA EDIÇÃO
-          </h2>
-          <ul class="list-disc pl-6 flex flex-col gap-3">
-            <li>
-              Não é permitido a criação de pacotes contendo DINHEIRO + JOGOS.
-            </li>
-            <li>
-              É <b class="text-red-500">PROIBIDO</b> fazer a seleção de
-              <b>DINHEIRO por DINHEIRO</b>. Caso uma troca dessa natureza seja
-              identificada, <span class="danger">o responsável será excluído da próxima MathTrade</span>
-              e receberá o mesmo valor que ofertou, impossibilitando qualquer tipo de lucro com essa prática.
-            </li>
-            <li>
-              Não será permitido o cadastro de <b>cartas promocionais</b> como itens isolados. Os mesmos ainda poderão
-              ser ofertados dentro de pacotes de jogos.
-            </li>
-            <li>
-              Não será permitido o cadastro de cartas avulsas ou decks dos
-              seguintes cardgames nesta edição:
-              <br />
-              <b>
-                Magic: The Gathering, Keyforge, Star Wars Destiny, Pokemon,
-                Yu-Gi-Oh!, Battle Scenes, VTES e Flash and Blood
-              </b>
-              <br />
-              Os demais cardgames seguem permitidos na geeklist.
-            </li>
-          </ul>
-        </div>
+    <hr class="my-5 w-3/4 mx-auto">
+    <section class="pb-14 mx-auto max-w-[90vw] md:max-w-[1080px] grid grid-cols-1 md:grid-cols-2 gap-3">
+      <div class="border border-gray-300 px-3 py-2">
+        <h2 class="text-2xl text-center font-bold mb-5">O QUE SERÁ PERMITIDO NESTA EDIÇÃO</h2>
+        <ul class="list-disc flex flex-col gap-3 pl-6">
+          <li>
+            Até <b>TRÊS</b> ofertas em <b>DINHEIRO</b> serão permitidas como
+            itens de troca nesta edição. Esses itens deverão ser cadastrados
+            individualmente como <span class="italic">OUTSIDE SCOPE OF BGG</span> (código 23953)
+            e o pagamento deverá ser realizado por <b>PIX</b>.
+            <span class="block mt-2">
+              obs: O BGG exige o pagamento de taxas para o site em caso de trocas em dinheiro. Consulte o site ou nos
+              grupos de whatsapp como essa taxa deve ser paga.
+            </span>
+          </li>
+          <li>
+            <b>Livros de RPG e acessórios relacionados a boardgame</b>
+            poderão ser adicionados apenas nas <b>últimas 12 horas</b> da
+            primeira etapa e devem ser cadastrados através do código 23953
+            ("Outside the scope of BGG"). Itens cadastrados descumprindo
+            essa regra serão removidos da geeklist sem aviso prévio.
+          </li>
+        </ul>
+      </div>
+      <div class="border border-gray-300 px-3 py-2">
+        <h2 class="text-2xl text-center font-bold mb-5">
+          O QUE <span class="bold text-red-500">NÃO</span> SERÁ PERMITIDO NESTA EDIÇÃO
+        </h2>
+        <ul class="list-disc pl-6 flex flex-col gap-3">
+          <li>
+            Não é permitido a criação de pacotes contendo DINHEIRO + JOGOS.
+          </li>
+          <li>
+            É <b class="text-red-500">PROIBIDO</b> fazer a seleção de
+            <b>DINHEIRO por DINHEIRO</b>. Caso uma troca dessa natureza seja
+            identificada, <span class="danger">o responsável será excluído da próxima MathTrade</span>
+            e receberá o mesmo valor que ofertou, impossibilitando qualquer tipo de lucro com essa prática.
+          </li>
+          <li>
+            Não será permitido o cadastro de <b>cartas promocionais</b> como itens isolados. Os mesmos ainda poderão
+            ser ofertados dentro de pacotes de jogos.
+          </li>
+          <li>
+            Não será permitido o cadastro de cartas avulsas ou decks dos
+            seguintes cardgames nesta edição:
+            <br />
+            <b>
+              Magic: The Gathering, Keyforge, Star Wars Destiny, Pokemon,
+              Yu-Gi-Oh!, Battle Scenes, VTES e Flash and Blood
+            </b>
+            <br />
+            Os demais cardgames seguem permitidos na geeklist.
+          </li>
+        </ul>
       </div>
     </section>
     <section id="cronograma_mathtrade">
-      <div class="text-white mx-auto max-w-[90vw]">
+      <div class="text-white mx-auto max-w-[90vw] md:max-w-[1080px] text-center">
         <h2 class="text-2xl text-center font-bold mb-5">CRONOGRAMA MATH TRADE BGBH - EDIÇÃO ESPECIAL PARA NOVATOS</h2>
         <div class="primeira-etapa mt-3">
           <h4 class="font-bold">PRIMEIRA ETAPA: Adicionando seus jogos na lista de trocas</h4>
@@ -235,7 +234,7 @@
             20/03/2025 (Segunda-Feira) 22h
           </p>
         </div>
-        <hr class="my-2">
+        <hr class="my-4 w-3/4 mx-auto">
         <div class="segunda-etapa">
           <h4 class="font-bold">SEGUNDA ETAPA: Definição e envio da lista de desejos (wantlist)</h4>
           <small>
@@ -248,14 +247,14 @@
             26/03/2025 (Quinta-Feira) 22h
           </p>
         </div>
-        <hr class="my-2">
+        <hr class="my-4 w-3/4 mx-auto">
         <div class="terceira-etapa">
           <h4 class="font-bold">
             TERCEIRA ETAPA: Resultado Oficial após execução do algoritmo
           </h4>
           <p class="mt-1">27/03/2025 (Sexta-Feira) 00h</p>
         </div>
-        <hr class="my-2">
+        <hr class="my-4 w-3/4 mx-auto">
         <div class="quarta-etapa">
           <h4 class="font-bold">QUARTA ETAPA: Entrega dos jogos</h4>
           <p class="mt-1">
@@ -274,7 +273,7 @@
         </div> -->
       </div>
     </section>
-    <section class="py-6 max-w-[90vw] mx-auto" id="regras_entregas">
+    <section class="pt-14 max-w-[90vw] md:max-w-[1080px] mx-auto" id="regras_entregas">
       <h2 class="text-2xl text-center font-bold mb-5">ENTREGAS MATH TRADE BGBH EDIÇÃO ESPECIAL PARA NOVATOS</h2>
       <p>
         Realizaremos um <b>encontro oficial de trocas</b>, mas não se preocupe, caso não tenha
@@ -317,7 +316,7 @@
         os custos da entrega e Lucas deverá buscar o jogo também no pornto de apoio, arcando com os custos da
         retirada. Ambos poderão utilizar aplicativos de entrega/retirada.
       </em>
-      <div class="border border-gray-300 px-4 py-2 mt-4 bg-gray-200">
+      <div class="border border-gray-300 px-4 py-2 my-12 bg-gray-200">
         <h3 class="font-bold text-center text-xl">IDENTIFICAÇÃO DOS JOGOS</h3>
         <p>
           Todos os jogos que serão entregues no ponto de apoio deverão conter uma etiqueta de sinalização contendo:
@@ -344,22 +343,22 @@
       </div>
       <div class="mt-5">
         <h3 class="font-bold text-center text-xl">HORÁRIOS DE ENTREGA NO LUDOCAFÉ</h3>
-        <p>
+        <p class="text-center">
           Devido às alterações de horários que a casa possui em determinadas épocas do ano, os horários de entrega dos
           jogos serão confirmados e informados no grupo MATH TRADE INFO do WhatsApp
         </p>
-        <h3 class="font-bold text-center text-xl mt-5">ENCONTRO OFICIAL DE ENTREGA DOS JOGOS</h3>
-        <p>
+        <h3 class="font-bold text-center text-xl mt-8">ENCONTRO OFICIAL DE ENTREGA DOS JOGOS</h3>
+        <p class="text-center">
           As informações sobre um eventual Encontro Oficial de Entrega que possa ser combinado será passada
           diretamente nos nossos grupos da Math Trade no WhatsApp
         </p>
       </div>
-      <div class="text-green-900 font-bold text-2xl text-center mt-5">
+      <div class="text-green-900 font-bold text-2xl text-center mt-12">
         SEJA BEM VINDO A NOSSA MATH TRADE E BOAS TROCAS!
       </div>
     </section>
-    <section id="grupos_mathtrade" class="text-white">
-      <div class="text-white mx-auto max-w-[90vw]">
+    <section id="grupos_mathtrade" class="text-white mt-6">
+      <div class="text-white mx-auto max-w-[90vw] md:max-w-[1080px] text-center">
         <h3 class="font-bold text-center text-xl">
           NÃO DEIXE DE PARTICIPAR DOS NOSSOS GRUPOS NO WHATSAPP
         </h3>
@@ -368,21 +367,24 @@
             <strong class="block">MATH TRADE INFO - SEM CHAT</strong>
             Grupo sem chat, voltado para informações e tudo aquilo que você
             precisa saber pra ficar sempre por dentro das nossas Math Trades
-            <a target="_blank" class="block w-20 text-center rounded-md mt-2 bg-slate-700 px-2 py-1 hover:bg-slate-900"
+            <a target="_blank"
+              class="block w-20 text-center rounded-md mt-2 mx-auto bg-slate-700 px-2 py-1 hover:bg-slate-900"
               href="https://chat.whatsapp.com/LVnSpPk5GWt5jTh6eH8vQR">Entrar</a>
           </p>
           <p>
             <strong class="block">MATH TRADE - COM CHAT</strong>
             Grupo onde os participantes das Math Trades interagem, tiram suas dúvidas e também recebem informações
             variadas sobre as Math Trades
-            <a target="_blank" class="block w-20 text-center rounded-md mt-2 bg-slate-700 px-2 py-1 hover:bg-slate-900"
+            <a target="_blank"
+              class="block w-20 text-center rounded-md mt-2 mx-auto bg-slate-700 px-2 py-1 hover:bg-slate-900"
               href="https://chat.whatsapp.com/CbhqNqTqj7OAnIJgou7bUs">Entrar</a>
           </p>
           <p>
             <strong class="block">MATH TRADE NOVATOS</strong>
             Grupo voltado para tirar dúvidas e acompanhar de perto a participação daqueles que estão pela primeira vez
             na nossa mathtrade
-            <a target="_blank" class="block w-20 text-center rounded-md mt-2 bg-slate-700 px-2 py-1 hover:bg-slate-900"
+            <a target="_blank"
+              class="block w-20 text-center rounded-md mt-2 mx-auto bg-slate-700 px-2 py-1 hover:bg-slate-900"
               href="https://chat.whatsapp.com/FMoWYohbaEtHQHqB71CuO9">Entrar</a>
           </p>
         </div>
