--- a/mathtrade-bh/regras-gerais.html
+++ b/mathtrade-bh/regras-gerais.html
@@ -79,7 +79,7 @@
 
     <!-- CONTEUDO PRINCIPAL -->
     <main class="py-6">
-        <section class="py-6 max-w-[90vw] mx-auto" id="regras_gerais">
+        <section class="pb-14 max-w-[90vw] md:max-w-[1080px] mx-auto" id="regras_gerais">
             <h1 class="text-green-900 font-extrabold text-3xl text-center mb-5">REGRAS GERAIS DE UMA MATH TRADE</h1>
             <p class="font-bold text-red-700 text-xl">IMPORTANTE:</p>
             <ul class="list-disc px-6">
@@ -121,8 +121,8 @@
                 </small>
             </p>
         </section>
-        <section class="bg-green-950 py-6">
-            <div class="text-white mx-auto max-w-[90vw]">
+        <section class="bg-slate-100 py-14">
+            <div class="mx-auto max-w-[90vw] md:max-w-[1080px]">
                 <h2 class="text-2xl text-center font-bold mb-5">ADICIONANDO BOARDGAMES EM UMA MATH TRADE</h2>
                 <ul class="list-disc px-6 flex flex-col gap-4">
                     <li>
@@ -151,7 +151,7 @@
                 </ul>
             </div>
             <hr class="my-5 max-w-[90vw] mx-auto">
-            <div class="text-white mx-auto max-w-[90vw]">
+            <div class="mx-auto max-w-[90vw] md:max-w-[1080px]">
                 <h2 class="text-2xl text-center font-bold mb-5">ADICIONANDO ITENS VARIADOS EM UMA MATH TRADE</h2>
                 <ul class="list-disc px-6 flex flex-col gap-4">
                     <li>
@@ -168,7 +168,7 @@
                 </ul>
             </div>
             <hr class="my-5 max-w-[90vw] mx-auto">
-            <div class="text-white mx-auto max-w-[90vw]">
+            <div class="mx-auto max-w-[90vw] md:max-w-[1080px]">
                 <h2 class="text-2xl text-center font-bold mb-5">PRÁTICAS PROIBIDAS</h2>
                 <ul class="list-disc px-6 flex flex-col gap-4">
                     <li>
@@ -183,7 +183,7 @@
                 </ul>
             </div>
         </section>
-        <section class="py-6 max-w-[90vw] mx-auto" id="entregas">
+        <section class="py-14 max-w-[90vw] md:max-w-[1080px] mx-auto" id="entregas">
             <div class="flex gap-4 flex-col md:flex-row">
                 <div class="border border-gray-400 p-2 md:max-w-[50%]">
                     <h2 class="text-2xl text-center font-bold mb-5">ENTREGAS (GERAL)</h2>
@@ -242,8 +242,8 @@
                 </div>
             </div>
         </section>
-        <section class="bg-gray-950 py-6" id="termos_responsabilidade">
-            <div class="text-white mx-auto max-w-[90vw]">
+        <section class="bg-gray-950 py-14" id="termos_responsabilidade">
+            <div class="text-white mx-auto max-w-[90vw] md:max-w-[1080px]">
                 <h2 class="text-2xl text-center font-bold mb-5">
                     TERMOS DE RESPONSABILIDADE
                 </h2>
