--- a/mathtrade-bh/edicao-novatos.html
+++ b/mathtrade-bh/edicao-novatos.html
@@ -231,7 +231,7 @@
           </small>
           <p class="mt-1">
             12/03/2025 (Quarta-Feira) 0h até <br />
-            20/03/2025 (Segunda-Feira) 22h
+            20/03/2025 (Quinta-Feira) 22h
           </p>
         </div>
         <hr class="my-4 w-3/4 mx-auto">
@@ -243,8 +243,8 @@
               class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
           </small>
           <p class="mt-1">
-            21/03/2025 (Segunda-Feira) 22h até <br />
-            26/03/2025 (Quinta-Feira) 22h
+            21/03/2025 (Sexta-Feira) 22h até <br />
+            26/03/2025 (Quarta-Feira) 22h
           </p>
         </div>
         <hr class="my-4 w-3/4 mx-auto">
@@ -252,13 +252,13 @@
           <h4 class="font-bold">
             TERCEIRA ETAPA: Resultado Oficial após execução do algoritmo
           </h4>
-          <p class="mt-1">27/03/2025 (Sexta-Feira) 00h</p>
+          <p class="mt-1">27/03/2025 (Quinta-Feira) 00h</p>
         </div>
         <hr class="my-4 w-3/4 mx-auto">
         <div class="quarta-etapa">
           <h4 class="font-bold">QUARTA ETAPA: Entrega dos jogos</h4>
           <p class="mt-1">
-            Entre 27/03/2025 (Sexta-Feira) e 29/03/2025 (Sábado) até 17h
+            Entre 27/03/2025 (Quinta-Feira) e 29/03/2025 (Sábado) até 17h
           </p>
           <p class="mt-2">
             Confira abaixo as informações sobre as entregas desta edição.
