--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -158,18 +158,18 @@
                         na fase inicial de pré-inscrição.
                     </li>
                     <li>
-                        Cada torneio será disputado em modo por turnos, com a duração total de 10 a 30 dias (5 a 10 dias
-                        por jogador).
+                        Cada torneio será disputado em modo por turnos, com a duração de 10 dias por partida,
+                        totalizando 40 a 60 dias por torneio.
                     </li>
                     <li>
                         As horas de jogo serão entre 09h00 e 21h00 (Horário de Brasília).
                         Nas outras 12 horas (entre 21h00 e 09h00), os jogadores podem continuar a jogar, mas o relógio
-                        mantém-se parado.
+                        ficará parado, não contabilizando o tempo dos jogadores.
                     </li>
                     <li>
                         Cada torneio será disputado em sistema suíço, com um número de rodadas
                         correspondente ao número de jogadores esperados, de acordo com a pré-inscrição e
-                        torneios anteriores.
+                        torneios anteriores (min. 4, máx. 6).
                     </li>
                     <li>
                         Caso um torneio não cumpra o estipulado no ponto anterior, precisando de mais uma
@@ -177,29 +177,22 @@
                         jogadores com vitórias em todas as partidas, será realizada uma final entre os jogadores
                         nessas circunstâncias.
                     </li>
-                    <li>
-                        Caso o tempo limite de um jogador se esgote, ficando a vermelho, em contagem negativa, o
-                        jogador <strong class="text-yellow-700"> NÃO DEVE</strong> ser expulso da mesa.
-                        Um jogador só pode ser expulso com autorização da Organização.
+                    <li class="text-red-400">
+                        ATENÇÃO! Caso o tempo limite de um jogador se esgote, ficando a vermelho, em contagem negativa,
+                        o jogador <strong> DEVE</strong> ser expulso da mesa. E o fato deve ser comunicado à
+                        organização.
                     </li>
                     <li>
                         Nos jogos com 3 ou mais jogadores em que o tempo limite para a conclusão da partida está
                         a acabar (quando faltarem 2 ou menos dias para o final e parecer óbvio que, ao ritmo em
                         que está, a partida não vai acabar), os jogadores devem primeiro
-                        <strong class="text-yellow-700"> contactar a ORGANIZAÇÃO</strong>
+                        <strong class="text-yellow-600"> contactar a ORGANIZAÇÃO</strong>
                         para pedir permissão para expulsar o jogador, a fim de evitar que as posições finais sejam
                         atribuídas pelo BGA com base no tempo restante.
                     </li>
                     <li>
-                        Qualquer expulsão de uma partida
-                        <strong class="text-yellow-700">não autorizada pela Organização</strong>
-                        deverá ser justificada à Organização pelo jogador que expulsou. A ausência de justificação ou
-                        uma justificação não aceita pela Organização poderá implicar uma penalização para o autor da
-                        expulsão.
-                    </li>
-                    <li>
-                        Os jogadores inscritos que causarem o não término das mesas dentro do tempo limite, devido à
-                        <strong class="text-yellow-700">ausência de jogadas ou baixo número de jogadas</strong>,
+                        Os jogadores inscritos que <strong class="text-yellow-600"> causarem o não término das mesas
+                            dentro do tempo limite, devido à ausência de jogadas ou baixo número de jogadas</strong>,
                         e forem expulsos das mesas serão impedidos de participar na temporada seguinte.
                         <br>
                         Exceção: Jogadores que forem expulsos e apresentarem justificativas plausíveis terão o caso
@@ -265,14 +258,14 @@
                     <p class="font-bold">PRÉ-INSCRIÇÃO NOS TORNEIOS</p>
                     <p>
                         <i class="bi bi-calendar"></i>
-                        20/01/2025 a 03/02/2025
+                        21/05/2025 a 02/06/2025
                     </p>
                 </div>
                 <div>
                     <p class="font-bold mt-3">INÍCIO DOS TORNEIOS</p>
                     <p>
                         <i class="bi bi-calendar"></i>
-                        10/02/2025 - 19 horas
+                        09/06/2025 - 19 horas
                     </p>
                 </div>
                 <hr>
@@ -285,20 +278,20 @@
                     </small>
                 </p>
                 <hr>
-                <p class="mt-4 font-bold">
+                <!-- <p class="mt-4 font-bold">
                     INSCRIÇÕES ENCERRADAS
-                </p>
-                <!-- <p class="font-bold">
+                </p> -->
+                <p class="font-bold">
                     LINK PARA PLANILHA DE PRÉ-INSCRIÇÃO DA TEMPORADA 1
                     <span class="text-red-600 block">
                         Leia a aba de regras da planilha para ver mais detalhes desta temporada
                     </span>
                     <a class="text-white bg-green-700 block px-3 py-2 max-w-[250px] text-center hover:bg-green-800"
-                        href="https://docs.google.com/spreadsheets/d/1uIPg3T1aEjvhLgt3iOupPAqbk6y0zkIyN5s27_-Ua9s/edit?gid=477089389#gid=477089389"
+                        href="https://docs.google.com/spreadsheets/d/1uIPg3T1aEjvhLgt3iOupPAqbk6y0zkIyN5s27_-Ua9s/edit?gid=2019419401#gid=2019419401"
                         target="_blank">
                         QUERO ME INSCREVER
                     </a>
-                </p> -->
+                </p>
             </div>
             <hr class="my-5">
             <div class="flex flex-col md:flex-row gap-5">
