--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -162,8 +162,8 @@
                         totalizando 40 a 60 dias por torneio.
                     </li>
                     <li>
-                        As horas de jogo serão entre 09h00 e 21h00 (Horário de Brasília).
-                        Nas outras 12 horas (entre 21h00 e 09h00), os jogadores podem continuar a jogar, mas o relógio
+                        As horas de jogo serão entre 10h00 e 22h00 (Horário de Brasília).
+                        Nas outras 12 horas (entre 22h00 e 10h00), os jogadores podem continuar a jogar, mas o relógio
                         ficará parado, não contabilizando o tempo dos jogadores.
                     </li>
                     <li>
@@ -180,7 +180,13 @@
                     <li class="text-red-400 font-bold">
                         ATENÇÃO! Caso o tempo limite de um jogador se esgote, ficando a vermelho, em contagem negativa,
                         o jogador <strong> DEVE</strong> ser expulso da mesa. E o fato deve ser comunicado à
-                        organização.
+                        organização. (Será definido a configuração de pelo menos 1 jogada a cada 2 dias para cada
+                        jogador.)
+                        <br>
+                        <small>
+                            Essa regra visa manter idoneidade ao campeonato, evitando decisões pessoais ou favorecimento
+                            a algum jogador. Também pensamos em dar mais agilidade às partidas.
+                        </small>
                     </li>
                     <li>
                         Nos jogos com 3 ou mais jogadores em que o tempo limite para a conclusão da partida está
@@ -258,19 +264,19 @@
                     <p class="font-bold">PRÉ-INSCRIÇÃO NOS TORNEIOS</p>
                     <p>
                         <i class="bi bi-calendar"></i>
-                        21/05/2025 a 02/06/2025
+                        27/05/2025 a 06/06/2025
                     </p>
                 </div>
                 <div>
                     <p class="font-bold mt-3">INÍCIO DOS TORNEIOS</p>
                     <p>
                         <i class="bi bi-calendar"></i>
-                        09/06/2025 - 19 horas
+                        09/06/2025 - 20 horas
                     </p>
                 </div>
                 <hr>
                 <p>
-                    - Os torneios terão início em dias da semana, sempre às 19 horas.
+                    - Os torneios terão início em dias da semana, sempre às 20 horas.
                     <br>
                     <small>
                         Durante os finais de semana não haverá início de novos torneios, mas as partidas em andamento
@@ -282,12 +288,12 @@
                     INSCRIÇÕES ENCERRADAS
                 </p> -->
                 <p class="font-bold">
-                    LINK PARA PLANILHA DE PRÉ-INSCRIÇÃO DA TEMPORADA 1
+                    LINK PARA PLANILHA DE PRÉ-INSCRIÇÃO DA TEMPORADA 2
                     <span class="text-red-600 block">
                         Leia a aba de regras da planilha para ver mais detalhes desta temporada
                     </span>
                     <a class="text-white bg-green-700 block px-3 py-2 max-w-[250px] text-center hover:bg-green-800"
-                        href="https://docs.google.com/spreadsheets/d/1uIPg3T1aEjvhLgt3iOupPAqbk6y0zkIyN5s27_-Ua9s/edit?gid=2019419401#gid=2019419401"
+                        href="https://docs.google.com/spreadsheets/d/1-gsqEPtke2Dtm80_8bh_qpcTM_de92PS72MOYSwvy60/edit?gid=477089389#gid=477089389"
                         target="_blank">
                         QUERO ME INSCREVER
                     </a>
