adicionando informacoes para MT 10a edicao

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <a href="/2025/mathtrade-bh/regras-gerais">
           <img src="src/img/mathtrade/regras-gerais-math-trade.jpeg" alt="Math Trade BH - Regras Gerais">
         </a>
-        <a href="/2025/mathtrade-bh/edicao-novembro-2024">
-          <img src="src/img/mathtrade/615x330-MT9.png" alt="Math Trade BH - Edição Novembro 2024">
+        <a href="/2025/mathtrade-bh/edicao-setembro-2025">
+          <img src="src/img/mathtrade/615x330-MT9.png" alt="Math Trade BH - Edição Setembro 2025">
         </a>
       </div>
     </section>
