--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 		<script>
 			AOS.init();
 		</script>
-		<script src="/public/js/scripts.js"></script>
+		<script type="module" src="/public/js/scripts.js"></script>
 
 		<!-- Firebase -->
 		<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
