--- a/mathtrade-bh/faq.html
+++ b/mathtrade-bh/faq.html
@@ -64,7 +64,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <!-- custom css -->
-    <link rel="stylesheet" href="../public/css/styles.css" />
+    <link rel="stylesheet" href="/src/styles/main.scss" />
     <script src="https://kit.fontawesome.com/09d18035e2.js" crossorigin="anonymous"></script>
     <style>
         .accordion-button:focus {
