fix mt meta url

--- a/mathtrade-bh/edicao-setembro-2025.html
+++ b/mathtrade-bh/edicao-setembro-2025.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoardgameBH [BGBH]</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="canonical" href="https://bgbh.com.br/mathtradebh/edicao-novatos.html">
+    <link rel="canonical" href="https://bgbh.com.br/2025/mathtradebh/edicao-setembro-2025.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,7 +20,7 @@
     <meta property="og:title" content="MATH TRADE BGBH - BGBH" />
     <meta property="og:site_name" content="BoardgameBH [BGBH]" />
     <meta property="og:url" content="https://bgbh.com.br/mathtradebh.html" />
-    <meta property="og:description" content="MATH TRADE BELO HORIZONTE - Edição Novatos" />
+    <meta property="og:description" content="MATH TRADE BELO HORIZONTE - 10ª Edição - Setembro 2025" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://bgbh.com.br/2025/img/math-trade/615x330-MT9.5.png" />
 </head>
