imagem provisoria MT10

--- a/mathtrade-bh/regras-gerais.html
+++ b/mathtrade-bh/regras-gerais.html
@@ -307,7 +307,7 @@
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
                 <a href="/2025/mathtrade-bh/edicao-setembro-2025" class="text-center w-auto mt-2">
-                    <img src="/img/math-trade/615x330-MT9.5.png" alt="Regras Math Trade Edição Novatos" />
+                    <img src="/img/math-trade/615x330-MT10.png" alt="Regras Math Trade Décima Edição" />
                 </a>
             </div>
         </section>
