--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -349,8 +349,8 @@
                     <br>
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
-                <a href="/2025/mathtrade-bh/edicao-novatos" class="text-center w-auto mt-2">
-                    <img src="/img/math-trade/615x330-MT9.5.png" alt="Regras Math Trade Nona Edição" />
+                <a href="/2025/mathtrade-bh/edicao-setembro-2025" class="text-center w-auto mt-2">
+                    <img src="/img/math-trade/615x330-MT10.png" alt="Regras Math Trade Décima Edição" />
                 </a>
             </div>
         </section>
