--- a/mathtrade-bh/edicao-setembro-2025.html
+++ b/mathtrade-bh/edicao-setembro-2025.html
@@ -240,8 +240,9 @@
                             class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
                     </small>
                     <p class="mt-1">
-                        17/09/2025 (Quarta-Feira) 0h até <br />
-                        22/09/2025 (Segunda-Feira) 22h
+                        Em breve
+						<!-- 17/09/2025 (Quarta-Feira) 0h até <br />
+                        22/09/2025 (Segunda-Feira) 22h -->
                     </p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
@@ -253,8 +254,9 @@
                             class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
                     </small>
                     <p class="mt-1">
-                        22/09/2025 (Segunda-Feira) 22h até <br />
-                        25/09/2025 (Quinta-Feira) 22h
+                        Em breve
+						<!-- 22/09/2025 (Segunda-Feira) 22h até <br />
+                        25/09/2025 (Quinta-Feira) 22h -->
                     </p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
@@ -262,13 +264,17 @@
                     <h4 class="font-bold">
                         TERCEIRA ETAPA: Resultado Oficial após execução do algoritmo
                     </h4>
-                    <p class="mt-1">26/09/2025 (Sexta-Feira) até 07h</p>
+                    <p class="mt-1">
+						Em breve
+						<!-- 26/09/2025 (Sexta-Feira) até 07h -->
+					</p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
                 <div class="quarta-etapa">
                     <h4 class="font-bold">QUARTA ETAPA: Entrega dos jogos</h4>
                     <p class="mt-1">
-                        Entre 26/09/2025 (Sexta-Feira) e 27/09/2025 (Sábado) até 17h
+                        Em breve
+						<!-- Entre 26/09/2025 (Sexta-Feira) e 27/09/2025 (Sábado) até 17h -->
                     </p>
                     <p class="mt-2">
                         Confira abaixo as informações sobre as entregas desta edição.
